--- a/src/app/components/footer/footer.component.html
+++ b/src/app/components/footer/footer.component.html
@@ -36,18 +36,27 @@
           <mat-icon class="mr-2">phone</mat-icon>
           <strong class="mr-1">N° Contacto:</strong>
           <a
-            href="tel:+56932426042"
+            href="tel:+56983803835"
             class="hover:text-red-500 hover:scale-105 transition-all duration-300 ease-in-out"
-            >+56 9 3242 6042</a
+            >+56 9 8380 3835</a
           >
         </p>
         <p class="text-gray-400 mb-2">
           <mat-icon class="mr-2">email</mat-icon>
-          <strong class="mr-1">Correo:</strong>
+          <strong class="mr-1">Correo1:</strong>
           <a
-            href="mailto:coronadoc899@gmail.com?subject=Consulta%20sobre%20extintores"
+            href="mailto:fekmarserviciotecnicoriobueno@gmail.com?subject=Consulta%20sobre%20extintores"
             class="hover:text-red-500 hover:scale-105 transition-all duration-300 ease-in-out"
-            >coronadoc899&#64;gmail.com</a
+            >fekmarserviciotecnicoriobueno&#64;gmail.com</a
+          >
+        </p>
+        <p class="text-gray-400 mb-2">
+          <mat-icon class="mr-2">email</mat-icon>
+          <strong class="mr-1">Correo2:</strong>
+          <a
+            href="mailto:prev.richard01@gmail.com?subject=Consulta%20sobre%20extintores"
+            class="hover:text-red-500 hover:scale-105 transition-all duration-300 ease-in-out"
+            >prev.richard01&#64;gmail.com</a
           >
         </p>
       </div>
@@ -77,7 +86,7 @@
       </div>
     </div>
     <div
-      class="text-center text-gray-500 text-sm mt-4 border-t border-gray-700 py-2"
+      class="text-center text-gray-500 text-sm mt-4 border-t border-gray-700 pt-4"
     >
       &copy; 2025 Carlos Coronado. Todos los derechos reservados.
     </div>
