--- a/src/app/modules/contacto/contacto.component.html
+++ b/src/app/modules/contacto/contacto.component.html
@@ -150,8 +150,6 @@
   </div>
 </section>
 
-<section
-  class="py-12 px-4 opacity-0 translate-y-10 transition-all duration-1000 ease-in-out"
->
+<section class="py-4 animate-fadeIn">
   <app-footer></app-footer>
 </section>
