--- a/src/app/modules/inicio/inicio.component.html
+++ b/src/app/modules/inicio/inicio.component.html
@@ -114,7 +114,7 @@
       </div>
       <div class="flex justify-center">
         <img
-          src="images/download(18).webp"
+          src="images/download(17).webp"
           alt="Imagen 4"
           loading="lazy"
           class="rounded-lg shadow-lg w-full h-auto"
@@ -167,21 +167,21 @@
         ¿Tienes dudas? Contáctanos al
         <strong>
           <a
-            href="tel:+56932426042"
+            href="tel:+56983803835"
             class="font-bold underline hover:text-red-500"
             aria-label="Llámanos al +56 9 3242 6042"
           >
-            +56 9 3242 6042
+            +56 9 8380 3835
           </a>
         </strong>
         o escríbenos a
         <strong>
           <a
-            href="mailto:coronadoc899@gmail.com?subject=Consulta%20sobre%20extintores"
+            href="mailto:fekmarserviciotecnicoriobueno@gmail.com?subject=Consulta%20sobre%20extintores"
             class="font-bold underline hover:text-red-500"
             aria-label="Envíanos un correo a coronadoc899@gmail.com"
           >
-            coronadoc899&#64;gmail.com
+            fekmarserviciotecnicoriobueno&#64;gmail.com
           </a>
         </strong>
       </p>
@@ -189,8 +189,6 @@
   </div>
 </section>
 
-<section
-  class="py-12 opacity-0 translate-y-10 transition-all duration-1000 ease-in-out"
->
+<section class="py-4 animate-fadeIn">
   <app-footer></app-footer>
 </section>
