--- a/src/app/modules/service/service.component.html
+++ b/src/app/modules/service/service.component.html
@@ -27,7 +27,6 @@
       <div class="w-full md:w-1/2">
         <div class="relative mx-auto overflow-hidden">
           <div class="relative flex items-center justify-center">
-            
             <img
               src="images/download(10).webp"
               alt="Imagen descriptiva"
@@ -160,8 +159,6 @@
   </div>
 </section>
 
-<section
-  class="py-12 opacity-0 translate-y-10 transition-all duration-1000 ease-in-out"
->
+<section class="py-4 animate-fadeIn">
   <app-footer></app-footer>
 </section>
