--- a/src/app/components/footer/footer.component.html
+++ b/src/app/components/footer/footer.component.html
@@ -76,6 +76,7 @@
           </a>
           <a
             href="https://www.instagram.com/distribuidorariobueno/"
+            class="ml-2"
             target="_blank"
           >
             <i
