--- a/src/app/modules/inicio/inicio.component.html
+++ b/src/app/modules/inicio/inicio.component.html
@@ -49,7 +49,7 @@
             <button
               *ngFor="let image of images; let i = index"
               (click)="goToImage(i)"
-              class="w-3 h-3 rounded-full bg-white bg-opacity-50 hover:bg-opacity-75 transition-all"
+              class="w-3 h-3 mr-3 rounded-full bg-white bg-opacity-50 hover:bg-opacity-75 transition-all"
               [class.bg-opacity-100]="i === currentIndex"
               [attr.aria-label]="'Ir a la imagen ' + (i + 1)"
             ></button>
