--- a/src/app/components/footer/footer.component.html
+++ b/src/app/components/footer/footer.component.html
@@ -89,7 +89,7 @@
     <div
       class="text-center text-gray-500 text-sm mt-4 border-t border-gray-700 pt-4"
     >
-      &copy; 2025 Carlos Coronado. Todos los derechos reservados.
+      &copy; 2025 Servicio Fekmar. Todos los derechos reservados.
     </div>
   </div>
 </footer>
