--- a/src/app/components/nav-bar/nav-bar.component.html
+++ b/src/app/components/nav-bar/nav-bar.component.html
@@ -11,7 +11,7 @@
   </button>
 
   <div class="hidden md:flex flex-col relative">
-    <div class="flex space-x-8">
+    <div class="flex space-x-8 gap-2">
       <a
         routerLink="/inicio"
         class="nav-link text-white text-sm hover:text-gray-300 p-2 transition-all duration-300"
