--- a/src/app/components/nav-bar/nav-bar.component.html
+++ b/src/app/components/nav-bar/nav-bar.component.html
@@ -10,8 +10,8 @@
     <i class="fas fa-bars text-2xl text-white"></i>
   </button>
 
-  <div class="hidden md:flex flex-col relative">
-    <div class="flex space-x-8 gap-2">
+  <div class="hidden md:flex flex-col relative gap-2">
+    <div class="flex space-x-8">
       <a
         routerLink="/inicio"
         class="nav-link text-white text-sm hover:text-gray-300 p-2 transition-all duration-300"
