--- a/src/app/components/nav-bar/nav-bar.component.html
+++ b/src/app/components/nav-bar/nav-bar.component.html
@@ -6,7 +6,10 @@
     Servicio Fekmar
   </span>
 
-  <button (click)="toggleMenu()" class="md:hidden focus:outline-none">
+  <button
+    (click)="toggleMenu()"
+    class="md:hidden focus:outline-none cursor-pointer"
+  >
     <i class="fas fa-bars text-2xl text-white"></i>
   </button>
 
@@ -47,7 +50,7 @@
 
   <div class="md:hidden flex items-center space-x-2">
     <a
-      href="tel:+56932426042"
+      href="tel:+56983803835"
       class="text-white hover:text-gray-300 flex items-center"
     >
       <mat-icon>phone</mat-icon>
