[FIX]: cambiar footer

--- a/src/app/modules/inicio/inicio.component.html
+++ b/src/app/modules/inicio/inicio.component.html
@@ -10,8 +10,8 @@
           Venta y Rellenado de Extintores
         </h1>
         <p class="text-lg md:text-xl text-gray-600 mb-6">
-          Con más de 20 años de experiencia, ofrecemos los mejores servicios en
-          extintores para proteger tu negocio y hogar.
+          Somos una empresa comprometida en ofrecer servicios confiables de
+          venta y mantencion de extintores para proteger tu negocio y hogar.
         </p>
         <a
           href="/contacto"
@@ -70,14 +70,15 @@
 
     <div class="text-center md:text-left mb-12">
       <p class="text-lg text-gray-600 mb-6">
-        Somos una empresa con más de 20 años de experiencia, ofrecemos los
-        mejores servicios en venta y mantenimiento de extintores. Nuestra misión
-        es la protección de sus negocios ofreciendo productos de la más alta
-        calidad y un servicio profesional.
+        Somos una empresa joven y comprometida con la seguridad, especializada
+        en la venta y mantenimiento de extintores. Nuestra misión es proteger lo
+        que más valoras, ofreciendo productos de calidad y un servicio cercano,
+        eficiente y profesional
       </p>
       <p class="text-lg text-gray-600 mb-6">
-        Contamos con un equipo altamente capacitado que garantiza soluciones
-        eficaces en prevención y control de incendios.
+        Contamos con un equipo preparado para brindarte soluciones efectivas en
+        prevención y control de incendios, adaptandonos a tus necesidades y
+        entregando atención personalizada.
       </p>
     </div>
 
@@ -187,8 +188,4 @@
       </p>
     </div>
   </div>
-</section>
-
-<section class="py-4 animate-fadeIn">
-  <app-footer></app-footer>
 </section>
