--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -2,4 +2,8 @@
   <app-nav-bar></app-nav-bar>
 
   <router-outlet></router-outlet>
+
+  <section class="py-4">
+    <app-footer></app-footer>
+  </section>
 </div>
