[FIX]: Correo electronico y inicio y servicio

--- a/src/app/components/footer/footer.component.html
+++ b/src/app/components/footer/footer.component.html
@@ -25,11 +25,11 @@
           <mat-icon class="mr-2">location_on</mat-icon>
           <strong class="mr-1">Dirección:</strong>
           <a
-            href="https://www.google.com/maps/search/Lord+Cochranne+970,+Rio+Bueno,+Los+Rios,+Chile/@-40.340708, -72.958023,17z?entry=ttu&g_ep=EgoyMDI1MDIwMy4wIKXMDSoASAFQAw%3D%3D"
+            href="https://maps.app.goo.gl/BUbVPgpuXKySmd9v7"
             target="_blank"
             class="hover:text-red-500 hover:scale-105 transition-all duration-300 ease-in-out"
           >
-            Lord Cochranne #970, Rio Bueno, Los Rios, Chile
+            Sector los copihues, Rio Bueno, Servicio Fekmar
           </a>
         </p>
         <p class="text-gray-400 mb-2">
@@ -43,22 +43,14 @@
         </p>
         <p class="text-gray-400 mb-2">
           <mat-icon class="mr-2">email</mat-icon>
-          <strong class="mr-1">Correo1:</strong>
+          <strong class="mr-1">Correo:</strong>
           <a
-            href="mailto:fekmarserviciotecnicoriobueno@gmail.com?subject=Consulta%20sobre%20extintores"
+            href="mailto:extintores.fekmarspa&#64;gmail.com?subject=Consulta%20sobre%20extintores"
             class="hover:text-red-500 hover:scale-105 transition-all duration-300 ease-in-out"
-            >fekmarserviciotecnicoriobueno&#64;gmail.com</a
+            > extintores.fekmarspa&#64;gmail.com</a
           >
         </p>
-        <p class="text-gray-400 mb-2">
-          <mat-icon class="mr-2">email</mat-icon>
-          <strong class="mr-1">Correo2:</strong>
-          <a
-            href="mailto:prev.richard01@gmail.com?subject=Consulta%20sobre%20extintores"
-            class="hover:text-red-500 hover:scale-105 transition-all duration-300 ease-in-out"
-            >prev.richard01&#64;gmail.com</a
-          >
-        </p>
+       
       </div>
 
       <div>
