--- a/src/app/modules/inicio/inicio.component.html
+++ b/src/app/modules/inicio/inicio.component.html
@@ -70,8 +70,8 @@
 
     <div class="text-center md:text-left mb-12">
       <p class="text-lg text-gray-600 mb-6">
-        Somos una empresa joven y comprometida con la seguridad, especializada
-        en la venta y mantenimiento de extintores. Nuestra misión es proteger lo
+        Somos una empresa comprometida con la prevención y seguridad, 
+         Nuestra misión es proteger lo
         que más valoras, ofreciendo productos de calidad y un servicio cercano,
         eficiente y profesional
       </p>
@@ -178,11 +178,11 @@
         o escríbenos a
         <strong>
           <a
-            href="mailto:fekmarserviciotecnicoriobueno@gmail.com?subject=Consulta%20sobre%20extintores"
+            href="mailto:extintores.fekmarspa&#64;gmail.com?subject=Consulta%20sobre%20extintores"
             class="font-bold underline hover:text-red-500"
             aria-label="Envíanos un correo a coronadoc899@gmail.com"
           >
-            fekmarserviciotecnicoriobueno&#64;gmail.com
+            extintores.fekmarspa&#64;gmail.com
           </a>
         </strong>
       </p>
