--- a/src/app/modules/service/service.component.html
+++ b/src/app/modules/service/service.component.html
@@ -11,9 +11,15 @@
           Región de los Ríos
         </h1>
         <p class="text-lg md:text-xl text-gray-600 mb-6">
-          La empresa realiza venta y mantenimiento de extintores, y realiza
-          entregas tanto en el pueblo donde reside como en las zonas urbanas
-          dentro de la región de Los Ríos.
+          Ofrecemos el servicio en terreno con unidad móvil equipada y certificada bajo Decreto supremo n° 44, para mantenciones, recargas de extintores.
+
+
+
+          Además ofrecemos mantención e instalaciones de redes húmedas; sensores; pulsadores de incendios dependiendo la necesidad del proyecto; requerimientos de compañías aseguradoras.
+
+
+
+          Realizamos venta de gabinetes contra incendios,  extintores  y capacitaciones. 
         </p>
         <div class="mt-4">
           <h3 class="text-red-600 mb-2">Funciones:</h3>
