[FIX]: Servicios y contactos

--- a/src/app/modules/contacto/contacto.component.html
+++ b/src/app/modules/contacto/contacto.component.html
@@ -29,15 +29,10 @@
           </p>
           <p>
             <span class="material-icons align-middle">email</span>
-            Correo 1:
+            Correo:
             <span class="font-semibold"
-              >fekmarserviciotecnicoriobueno&#64;gmail.com</span
+              >extintores.fekmarspa&#64;gmail.com</span
             >
-          </p>
-          <p>
-            <span class="material-icons align-middle">email</span>
-            Correo 2:
-            <span class="font-semibold">prev.richard01&#64;gmail.com</span>
           </p>
           <p class="mt-2 text-yellow-500 font-semibold">
             <span class="material-icons align-middle">do_not_disturb_alt</span>
