--- a/src/app/modules/service/service.component.html
+++ b/src/app/modules/service/service.component.html
@@ -10,17 +10,25 @@
           Brindamos soluciones y ejecutamos trabajos en diversas zonas de la
           Región de los Ríos
         </h1>
-        <p class="text-lg md:text-xl text-gray-600 mb-6">
-          Ofrecemos el servicio en terreno con unidad móvil equipada y certificada bajo Decreto supremo n° 44, para mantenciones, recargas de extintores.
 
+        <div class="text-lg md:text-xl text-gray-600 space-y-6 mb-6">
+          <p>
+            Ofrecemos el servicio en terreno con una unidad movil equipada y
+            certificada bajo Decreto Supremo N° 44, mantenciones y recargas de
+            extintores.
+          </p>
+          <p>
+            Además ofrecemos mantención e instalaciones de redes húmedas;
+            instalación y mantención de centrales de incendios; sensores;
+            pulsadores de incendios dependiendo la necesidad del proyecto;
+            requerimientos de compañías aseguradoras.
+          </p>
+          <p>
+            Realizamos venta de gabinetes contra incendios, pitones, extintores
+            y asesorías en proyectos y capacitaciones.
+          </p>
+        </div>
 
-
-          Además ofrecemos mantención e instalaciones de redes húmedas; sensores; pulsadores de incendios dependiendo la necesidad del proyecto; requerimientos de compañías aseguradoras.
-
-
-
-          Realizamos venta de gabinetes contra incendios,  extintores  y capacitaciones. 
-        </p>
         <div class="mt-4">
           <h3 class="text-red-600 mb-2">Funciones:</h3>
           <ul class="list-disc pl-6 text-lg text-gray-800">
