[FIX]: direccion y contacto

--- a/src/app/components/footer/footer.component.html
+++ b/src/app/components/footer/footer.component.html
@@ -21,36 +21,46 @@
         <h3 class="text-lg font-semibold mb-3 text-red-800">
           Dirección y Contacto
         </h3>
-        <p class="text-gray-400 mb-2">
-          <mat-icon class="mr-2">location_on</mat-icon>
-          <strong class="mr-1">Dirección:</strong>
-          <a
-            href="https://maps.app.goo.gl/BUbVPgpuXKySmd9v7"
-            target="_blank"
-            class="hover:text-red-500 hover:scale-105 transition-all duration-300 ease-in-out"
-          >
-            Sector los copihues, Rio Bueno, Servicio Fekmar
-          </a>
-        </p>
-        <p class="text-gray-400 mb-2">
-          <mat-icon class="mr-2">phone</mat-icon>
-          <strong class="mr-1">N° Contacto:</strong>
-          <a
-            href="tel:+56983803835"
-            class="hover:text-red-500 hover:scale-105 transition-all duration-300 ease-in-out"
-            >+56 9 8380 3835</a
-          >
-        </p>
-        <p class="text-gray-400 mb-2">
-          <mat-icon class="mr-2">email</mat-icon>
-          <strong class="mr-1">Correo:</strong>
-          <a
-            href="mailto:extintores.fekmarspa&#64;gmail.com?subject=Consulta%20sobre%20extintores"
-            class="hover:text-red-500 hover:scale-105 transition-all duration-300 ease-in-out"
-            > extintores.fekmarspa&#64;gmail.com</a
-          >
-        </p>
-       
+
+        <div class="text-gray-400 mb-2 flex items-start">
+          <mat-icon class="mr-2 mt-0.5">location_on</mat-icon>
+          <div>
+            <strong class="mr-3">Dirección:</strong>
+            <a
+              href="https://maps.app.goo.gl/BUbVPgpuXKySmd9v7"
+              target="_blank"
+              class="hover:text-red-500 hover:scale-105 transition-all duration-300 ease-in-out inline-block"
+            >
+              Sector los copihues, Rio Bueno, Servicio Fekmar
+            </a>
+          </div>
+        </div>
+
+        <div class="text-gray-400 mb-2 flex items-start">
+          <mat-icon class="mr-2 mt-0.5">phone</mat-icon>
+          <div>
+            <strong class="mr-3">N° Contacto:</strong>
+            <a
+              href="tel:+56983803835"
+              class="hover:text-red-500 hover:scale-105 transition-all duration-300 ease-in-out inline-block"
+            >
+              +56 9 8380 3835
+            </a>
+          </div>
+        </div>
+
+        <div class="text-gray-400 mb-2 flex items-start">
+          <mat-icon class="mr-2 mt-0.5">email</mat-icon>
+          <div>
+            <strong class="mr-3">Correo:</strong>
+            <a
+              href="mailto:extintores.fekmarspa&#64;gmail.com?subject=Consulta%20sobre%20extintores"
+              class="hover:text-red-500 hover:scale-105 transition-all duration-300 ease-in-out inline-block"
+            >
+              extintores.fekmarspa&#64;gmail.com
+            </a>
+          </div>
+        </div>
       </div>
 
       <div>
