--- a/src/app/components/footer/footer.component.html
+++ b/src/app/components/footer/footer.component.html
@@ -17,14 +17,18 @@
         </p>
       </div>
 
-      <div>
-        <h3 class="text-lg font-semibold mb-3 text-red-800">
+      <div class="max-w-4xl mx-auto">
+        <h3
+          class="text-lg font-semibold mb-3 text-red-800 text-center md:text-left"
+        >
           Dirección y Contacto
         </h3>
 
-        <div class="text-gray-400 mb-2 flex items-start">
+        <div
+          class="text-gray-400 mb-2 flex flex-col md:flex-row items-center md:items-start"
+        >
           <mat-icon class="mr-2 mt-0.5">location_on</mat-icon>
-          <div>
+          <div class="text-center md:text-left">
             <strong class="mr-3">Dirección:</strong>
             <a
               href="https://maps.app.goo.gl/BUbVPgpuXKySmd9v7"
@@ -36,10 +40,12 @@
           </div>
         </div>
 
-        <div class="text-gray-400 mb-2 flex items-start">
+        <div
+          class="text-gray-400 mb-2 flex flex-col md:flex-row items-center md:items-start"
+        >
           <mat-icon class="mr-2 mt-0.5">phone</mat-icon>
-          <div>
-            <strong class="mr-3">N° Contacto:</strong>
+          <div class="text-center md:text-left">
+            <strong class="mr-1">N° Contacto:</strong>
             <a
               href="tel:+56983803835"
               class="hover:text-red-500 hover:scale-105 transition-all duration-300 ease-in-out inline-block"
@@ -49,10 +55,12 @@
           </div>
         </div>
 
-        <div class="text-gray-400 mb-2 flex items-start">
+        <div
+          class="text-gray-400 mb-2 flex flex-col md:flex-row items-center md:items-start"
+        >
           <mat-icon class="mr-2 mt-0.5">email</mat-icon>
-          <div>
-            <strong class="mr-3">Correo:</strong>
+          <div class="text-center md:text-left">
+            <strong class="mr-1">Correo:</strong>
             <a
               href="mailto:extintores.fekmarspa&#64;gmail.com?subject=Consulta%20sobre%20extintores"
               class="hover:text-red-500 hover:scale-105 transition-all duration-300 ease-in-out inline-block"
